--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Take Home Coding Challenge",
   "main": "index.js",
   "scripts": {
+    "webpack": "webpack",
+    "dev": "npm run webpack -- --mode development --watch",
+    "prod": "npm run webpack -- --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +18,18 @@
   "bugs": {
     "url": "https://github.com/agheith/photo-gallery-app/issues"
   },
-  "homepage": "https://github.com/agheith/photo-gallery-app#readme"
+  "homepage": "https://github.com/agheith/photo-gallery-app#readme",
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4"
+  }
 }
