--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/runtime": "^7.4.5",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
+    "dotenv-webpack": "^1.7.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.3",
