--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mini-css-extract-plugin": "^0.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "serve": "^11.0.1"
   }
 }
